--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ shruti0504}}
+          password: ${{ Snapcode@0504}}
 
       - name: Push Docker image to Docker Hub
         run: docker tag sorting-visualizer ${{ secrets.DOCKER_USERNAME }}/sorting-visualizer:latest && docker push ${{ secrets.DOCKER_USERNAME }}/sorting-visualizer:latest
