--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -7,24 +7,25 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Docker
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image
-        run: docker build -t sorting-visualizer .
-
-      - name: Log in to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ shruti0504}}
+          username: ${{ shruti0504 }}
           password: ${{ Snapcode@0504}}
 
-      - name: Push Docker image to Docker Hub
-        run: docker tag sorting-visualizer ${{ secrets.DOCKER_USERNAME }}/sorting-visualizer:latest && docker push ${{ secrets.DOCKER_USERNAME }}/sorting-visualizer:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: shruti0504/sorting-visualizer:latest
